<resources>
    <string name="app_name">framework</string>
    <string name="press_back_again_to_exit">برای خروج، دوباره دکمه بازگشت را بزنید</string>
    <string name="ok">تایید</string>
    <string name="ok_and_print">تایید و چاپ</string>
    <string name="search">جستجو</string>
    <string name="filter_is_mandatory">وارد کردن فیلتر الزامی است</string>
    <string name="filter">فیلتر</string>
    <string name="filter_on">فیلتر ها اعمال شوند</string>
    <string name="filters">فیلتر ها</string>
    <string name="add_filter">افزودن فیلتر</string>
    <string name="row_number">ردیف</string>
    <string name="icon">icon</string>
    <string name="backspace">backspace</string>
    <string name="clear">clear</string>
    <string name="done">انجام شد</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="dot">.</string>
    <string name="delete">حذف</string>
    <string name="total">مجموع</string>
    <string name="qty">مقدار</string>
    <string name="close">بستن</string>
    <string name="equals">برابر با</string>
    <string name="after">پس از</string>
    <string name="before">پیش از</string>
    <string name="not_empty"> نباید خالی باشد</string>
    <string name="cancel">انصراف</string>
    <string name="options">گزینه ها</string>
    <string name="all_options">همه موارد</string>
    <string name="no_option">هیچکدام</string>
    <string name="groups">گروه ها</string>
    <string name="storage_permission_denied">درخواست دسترسی به حافظه رد شد</string>
    <string name="camera_permission_denied">درخواست دسترسی به دوربین رد شد</string>
    <string name="tools">گزینه ها</string>
    <string name="fine_location_permission_denied">درخواست دسترسی به موقعیت دقیق رد شد</string>
    <string name="coearse_location_permission_denied">درخواست دسترسی به موقعیت دقیق رد شد</string>
    <string name="location_permission_denied">دسترسی به موقعیت دستگاه رد شد</string>
    <string name="un_supported_operation">عملیات در این نسخه ساپورت نمی شود !</string>
    <string name="error">خطا</string>
    <string name="data_validation_failed">داده ها ی نامعتبر دریافت شد !</string>
    <string name="data_error">خطا در داده دریافتی</string>
    <string name="network_access_error">خطا در ارتباط با وب سرویس</string>
    <string name="saving_picture">ذخیره سازی عکس</string>
    <string name="picture_attachment">پیوست عکس</string>
    <string name="error_saving_attachment">خطا در ذخیره پیوست</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="error_deleting_attachment">خطا در حذف پیوست</string>
    <string name="loading_data_items">در حال بازیابی داده ها …</string>
    <string name="attachment_is_mandatory">پیوست اجباری است !</string>
    <string name="max_and_min_value_are_respectively">مقدار بیشینه و کمینه به ترتیب عبارتند از :</string>
    <string name="this_field_is_mandatory">این پرسش اجباری است !</string>
    <string name="no_data_to_load">آیتمی برای نمایش وجود ندارد !</string>
    <string name="varanegar_service">سرویس دهنده ورانگر</string>
    <string name="varanegar_scheduler_started">سرویس دهنده ورانگر آغاز به کار کرد</string>
    <string name="permission_denied">مجوز دسترسی پذیرفته نشد !</string>
    <string name="operation_is_running">عملیات در حال انجام میباشد!</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="onhand_qty">موجودی</string>
    <string name="onhand_qty_init">موجودی اولیه</string>
    <string name="onhand_qty_small_unit">موجودی به واحد کوچک</string>
    <string name="do_not_show_dialog_again">دیگر پیغام را نمایش نده</string>
    <string name="greater_than">بیشتر از</string>
    <string name="less_than">کمتر از</string>
    <string name="exists_in">شامل</string>
    <string name="action_pending">در انتظار اقدام</string>
    <string name="current_onhand_qty">موجودی فعلی</string>
    <string name="retuned_from_dist">برگشت از توزیع</string>
    <string name="well_returned">برگشتی سالم</string>
    <string name="waste_returned">برگشتی ضایعاتی</string>
    <string name="phone_number_is_not_valid">شماره تلفن اشتباه است</string>
    <string name="length_is_not_valid">طول ورودی اشتباه است</string>
    <string name="national_code_is_not_valid">فرمت کد ملی نادرست است</string>
    <string name="varanegar_tracking_service">سرویس ردیابی ورانگر</string>
    <string name="value_is_not_valid">مقدار نامعتبر است</string>
    <string name="background_location_permission_denied">دسترسی به موقعیت جغرافیایی در پس زمینه رد شد</string>
    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>

</resources>
