<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:padding="@dimen/padding_left_right_default">

        <Switch
            android:id="@+id/filter_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/padding_default"
            android:gravity="start|center_vertical"
            android:text="@string/filter_on" />


    </LinearLayout>

    <include layout="@layout/horizontal_line" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@android:drawable/ic_menu_add"
        android:gravity="start|center_vertical"
        android:text="@string/add_filter"
        android:drawableLeft="@android:drawable/ic_menu_add" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:padding="@dimen/padding_left_right_large"
        android:text="@string/filters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/horizontal_line" />

    <ListView
        android:layout_gravity="start"
        android:id="@+id/filters_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="?attr/colorDivider"
        android:dividerHeight="@dimen/padding_linear_layout_divider" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
</LinearLayout>