<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_frame_layout"
    android:background="@color/transparent"
    android:layout_width="250dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:animateLayoutChanges="true"
            android:background="@color/white"
            android:elevation="@dimen/padding_default"
            android:orientation="horizontal"
            android:padding="@dimen/padding_left_right_small">

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/padding_default"
                    android:text="@string/unit_price_label"
                    android:textSize="@dimen/calculator_text_size_default" />

                <TextView
                    android:id="@+id/unit_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/padding_left_right_small"
                    android:textSize="@dimen/calculator_text_size_default" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/numpad"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/numpad_back_color"
            android:baselineAligned="false"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/options"
                style="?android:buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/back_image_button"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"                    android:contentDescription="@string/backspace"
                    android:src="@drawable/ic_backspace_white_24dp" />

                <ImageButton
                    android:id="@+id/clear_image_button"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="0dp"                    android:background="@color/red"
                    android:contentDescription="@string/clear"
                    android:src="@drawable/ic_clear_white_24dp" />

                <ImageButton
                    android:id="@+id/done_image_button"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    android:layout_height="0dp"
                    android:background="@color/green"
                    android:contentDescription="@string/done"
                    android:src="@drawable/ic_done_white_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/numbers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/options"
                android:orientation="vertical">

                <LinearLayout
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button1"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button2"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_2"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button3"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_3"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_4"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button5"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_5"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button6"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_6"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button7"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_7"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button8"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_8"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button9"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_9"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    style="?android:buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">

                    <Button
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button0"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button00"
                        style="?android:buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/_00"
                        android:textColor="@color/white"
                        android:textSize="@dimen/default_text_size"
                        android:textStyle="bold" />


                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
